  improved unittests. In particular:

  - The selector names for boolean properties were wrong

  - Properties with a "depends_on" list didn't inherit properly

  - Properties that were used in subclasses didn't generate the correct KVO 
    events when they were observed.

  - KVO issues with computed (read-only) properties

Version 2.4.1
-------------

- Cocoa wrappers: fix metadata for ``copy``, ``mutableCopy``, 
  ``copyWithZone:`` and ``mutableCopyWithZone:``

- Fix for issue 3585235 on SourceForge: the threading helper category on
  NSObject didn't work due to a typo (defined in the Cocoa bindings)

  Fix is based on a patch by "Kentzo" with further updates and tests by
  Ronald.

- Rename ReadMe.txt to README.txt to work around misfeature in the 
  sdist command in distutils.

- Issue #28: Avoid crash when using CGEventTabProxy values.

- Issue #33: "easy_install pyobjc" no longer tries to install the
  InterfaceBuilderKit bindings on OSX 10.7 or later.

Version 2.4
-----------

.. note::

   Sadly enough this changelog is incomplete.

- Fix crash when unarchiving a Python object. 

- Add missing calls to ``[super init]`` in the implementation of
  OC_PythonUnicode and OC_PythonString (the ObjC proxies for python's
  unicode and str types)

- ``objc.addConvenienceForSelector`` is deprecated, primarily to make 
  it possible to restructure the pyobjc internals.

- Workaround for bug in pip that resulted in pyobjc-core not being pip
  installable.  Patch by Marc Abramowitz.

- Creating new formal protocols now uses the new runtime API that was
  introduced in OSX 10.7. Because of this it is now possible to create
  new formal protocols in 64-bit code (when running on OSX 10.7 or later)

- Codebase should work again when Python using ``--enable-unicode=ucs4``.

- BUG: Avoid crashes in calculating with NSDecimal values in Python 3

- Implement '//' operator for NSDecimal and NSDecimalNumber. 

- Implement support for the ``round`` builtin in NSDecimal and